setting of ratings and hotel to every user