@@ -1,20 +1,23 @@
 package com.lcwd.user.service.services.impl;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.UUID;
-
+import com.lcwd.user.service.entities.Hotel;
 import com.lcwd.user.service.entities.Rating;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
 import com.lcwd.user.service.entities.User;
 import com.lcwd.user.service.exception.ResourceNotFoundException;
 import com.lcwd.user.service.repositories.UserRepository;
 import com.lcwd.user.service.services.UserService;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -50,7 +53,19 @@ public class UserServiceImpl implements UserService {
         // http://192.168.1.4:8083/ratings/users/08ff6c1c-baab-408e-8a72-3c817a575ab7
         Rating[] ratingsOfUser = restTemplate.getForObject("http://192.168.1.4:8083/ratings/users/" + user.getUserId(), Rating[].class);
         logger.info("{}", ratingsOfUser);
-	List<Rating>ratingList=Arrays.stream(ratingsOfUser).toList();
+List<Rating> ratings= Arrays.stream(ratingsOfUser).toList();
+
+List<Rating> ratingList=  ratings.stream().map(rating ->{
+            //api call to hotel service to get the hotel
+//          http://localhost:8082/hotels/3b19334d-a249-4092-999f-1134312f4d48
+          ResponseEntity<Hotel> forEntity= restTemplate.getForEntity("http://localhost:8082/hotels/"+rating.getHotelId(), Hotel.class);
+         Hotel hotel= forEntity.getBody();
+         logger.info("response status code",forEntity.getStatusCode());
+          //set the hotel to rating
+    rating.setHotel(hotel);
+    //return the rating
+            return rating;
+        } ).collect(Collectors.toList());
         user.setRatings(ratingList);
         return user;
     }
